--- a/tiny_mrp/mrp/templates/mrp/rfq/partialRFQUpdate.html
+++ b/tiny_mrp/mrp/templates/mrp/rfq/partialRFQUpdate.html
@@ -1,10 +1,10 @@
-<form method="post" action="{% url 'create_rfq' lid   %}" class="js-rfq-create-form">
+<form method="post" action="{% url 'rfq_update' form.instance.id   %}" class="js-rfq-update-form">
     {% csrf_token %}
     <div class="modal-header " >
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h4 class="modal-title">جدید</h4>
+      <h4 class="modal-title">ویرایش</h4>
     </div>
     <div class="modal-body">
      {% include 'mrp/rfq/partialRFQForm.html' %}
