--- a/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/tab_updatereq_v2.html
@@ -162,7 +162,7 @@
         
         
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" style="max-height: 400px; overflow-y: auto;">
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" style="max-height: 800px; overflow-y: auto;">
             {% for i in logs %}
             <div class="d-flex align-items-center p-l-r-0 m-b-20">
                 <div class="d-flex align-items-center">
@@ -171,7 +171,7 @@
                     </figure>
                     <div>
                         <h6 class="m-b-0">
-                            <span class="text-primary"> {{i.action}}</span>
+                            <span class="text-primary"> {{i.action|safe}}</span>
                         </h6>
                         
                     </div>
