--- a/tiny_mrp/mrp/templates/mrp/gaurd/list.html
+++ b/tiny_mrp/mrp/templates/mrp/gaurd/list.html
@@ -27,10 +27,10 @@
         <div class="col-md-3 app-sidebar main_slidebar">
             <div class="card">
                 <div class="card-body">
-                    <button class="btn btn-outline-dark btn-block btn-block2" id="createreq" data-url="{% url 'create_purchase' %}" >
+                    {% comment %} <button class="btn btn-outline-dark btn-block btn-block2" id="createreq" data-url="{% url 'create_purchase' %}" >
                         درخواست جدید                   </button>
                         <button class="btn btn-outline-dark btn-block btn-block3" data-url="#" >
-                            برون ریزی                 </button>
+                            برون ریزی                 </button> {% endcomment %}
                        
                 </div>
                 <div class="app-sidebar-menu">
@@ -144,8 +144,8 @@
                            
                         </tbody>
                     </table>
-                    <button class="btn btn-success my-3" id="assign-selected-btn" >انتصاب آیتم انتخابی</button>
-                    <button class="btn btn-success" id="save-suppliers">ذخیره</button>
+                    {% comment %} <button class="btn btn-success my-3" id="assign-selected-btn" >انتصاب آیتم انتخابی</button>
+                    <button class="btn btn-success" id="save-suppliers">ذخیره</button> {% endcomment %}
             
                 </div>
             </div>
@@ -687,9 +687,7 @@
           
       </script>
   
-<script src="{% static 'project/purchase.js' %}"></script>
 
-<script src="{% static 'project/purchaselist.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/tributejs@5.1.3/dist/tribute.min.js"></script>
 
 
