--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList2.html
@@ -76,7 +76,7 @@
                         <a  class="list-group-item d-flex align-items-center">
                             
                             <div class="custom-control custom-switch custom-checkbox-warning">
-                                <input type="checkbox" class="custom-control-input" id="customSwitch3_" name="customSwitch3_">
+                                <input type="checkbox" class="custom-control-input" id="customSwitch3_" name="customSwitch3_" {% if is_tamiri%} checked {% endif %}>
                                 <label class="custom-control-label" for="customSwitch3_">
                                     درخواست تعمیر
                                     
