--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -97,6 +97,11 @@
     $('input[name="created_at"]').pDatepicker({
         format: 'YYYY-MM-DD',
                 autoClose: true,
-                initialValueType: 'gregorian'
+                initialValueType: 'gregorian',
+                calendar:{
+            persian: {
+                leapYearMode: 'astronomical'
+            }
+        },
       });
 </script>
