--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -20,6 +20,8 @@
 
 <link rel="stylesheet" href="{%  static 'vendors/datepicker/daterangepicker.css' %}">
 <link rel="stylesheet" href="{%  static 'assets/Datepiker/persian-datepicker.css' %}">
+  <!-- Select2 -->
+  <link rel="stylesheet" href="{%  static 'vendors/select2/css/select2.min.css' %}" type="text/css">
 {% block stylesheet %}
 {% endblock %}
 
@@ -197,6 +199,8 @@
 <!-- // -->
 <script src="{% static 'assets/Datepiker/persian-date.js' %}"></script>
 <script src="{% static 'assets/Datepiker/persian-datepicker.js' %}"></script>
+<!-- Select2 -->
+<script src="{% static 'vendors/select2/js/select2.min.js' %}"></script>
 
 
 
