--- a/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/partialAssetAmarList.html
@@ -37,7 +37,7 @@
             {% if c.machine.assetCategory.id == cat_item.id %}
             <tr data-machine={{c.machine.id}} data-shift="{{i.id}}" data-speed2="{{c.speed}}">
               <td data-assetcategory2="{{c.machine.assetCategory2.id}}">{{c.machine.assetName}}</td>
-              <td><select name="moshakhase" class="form-control select moshakhase" required="">
+              <td><select name="moshakhase" class="form-control select moshakhase select2" required="">
                 <option value="-1" {% if not c.moshakhase %} selected {% endif %}>---------</option>
                 {% for moshakhase in moshakhasat %}
               
