--- a/tiny_mrp/mrp/templates/mrp/product/partialProductCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/product/partialProductCreate.html
@@ -1,62 +1,19 @@
-
-<form id="product-form">
+<form method="post" action="{% url 'create_product'   %}" class="js-product-create-form" autocomplete="off">
     {% csrf_token %}
+    <div class="modal-header bg-primary" >
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <h4 class="modal-title">جدید</h4>
+    </div>
+    <div class="modal-body">
+     {% include 'mrp/product/partialProductForm.html' %}
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default">انصراف</button>
+      
+      <button type="submit" class="btn btn-primary" >ذخیره</button>
+     
+    </div>
+  </form>
 
-    <input type="hidden" id="product-id">
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <label for="product-name" class="form-label">Name*</label>
-            <input type="text" class="form-control" id="product-name" required>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="product-code" class="form-label">Code*</label>
-            <input type="text" class="form-control" id="product-code" required>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <label for="product-type" class="form-label">Type*</label>
-            <select class="form-select" id="product-type" required>
-                <option value="">Select type</option>
-                <option value="raw">Raw Material</option>
-                <option value="finished">Finished Good</option>
-                <option value="component">Component</option>
-            </select>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="product-uom" class="form-label">Unit of Measure*</label>
-            <select class="form-select" id="product-uom" required>
-                <option value="">Select UoM</option>
-                <option value="units">Units</option>
-                <option value="kg">Kilograms</option>
-                <option value="g">Grams</option>
-                <option value="l">Liters</option>
-                <option value="ml">Milliliters</option>
-                <option value="m">Meters</option>
-                <option value="cm">Centimeters</option>
-            </select>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <label for="product-cost" class="form-label">Cost Price*</label>
-            <div class="input-group">
-                <span class="input-group-text">$</span>
-                <input type="number" step="0.01" min="0" class="form-control" id="product-cost" required>
-            </div>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="product-sale" class="form-label">Sale Price*</label>
-            <div class="input-group">
-                <span class="input-group-text">$</span>
-                <input type="number" step="0.01" min="0" class="form-control" id="product-sale" required>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-6 mb-3">
-            <label for="product-quantity" class="form-label">Available Quantity*</label>
-            <input type="number" step="0.01" min="0" class="form-control" id="product-quantity" required>
-        </div>
-    </div>
-</form>
